Update to the UI of the application